--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  firebase_auth:
   cloud_firestore: ^2.3.0
-   # firebase_core: ^1.3.0
+  firebase_core: ^1.3.0
 
 dev_dependencies:
   flutter_test:
