--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  camera: ^0.8.1+3
+  story_view: ^0.13.1
   flutter:
     sdk: flutter
 
@@ -26,8 +28,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  firebase_storage: ^8.0.4
   cloud_firestore: ^2.3.0
    # firebase_core: ^1.3.0
+  firebase_auth: ^1.1.1
+  firebase_messaging: ^9.1.1
 
 dev_dependencies:
   flutter_test:
